--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,7 @@ jobs:
       - setup_remote_docker:
           # https://circleci.com/docs/2.0/building-docker-images/#docker-version
           version: 20.10.12
-          # intentionally turn of CircleCI DLC
+          # intentionally turn off CircleCI DLC
           docker_layer_caching: false
       - docker-registry-login
       - run:
