--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.7'
 
 services:
   server:
@@ -22,3 +22,9 @@ services:
       POSTGRES_PASSWORD: Willy
     volumes:
       - "./postgres/init:/docker-entrypoint-initdb.d"
+    healthcheck:
+      test: ["psql", "-U", "$$POSTGRES_USER", "-d", "$$POSTGRES_DB", "-c", "'SELECT 1;'"]
+      interval: 20s
+      timeout: 20s
+      retries: 3
+      start_period: 30s
