--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,8 +25,7 @@ jobs:
     steps:
       - checkout
       - setup_remote_docker:
-          # using old Docker version
-          version: 19.03.8
+          version: << parameters.remote_docker_version >>
       - run: docker version
       - run: docker info
       - run:
