--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,8 @@ defaults:
 
 jobs:
   build_custom_nginx:
+    environment:
+      <<: *environment
     machine:
       image: ubuntu-2004-cuda-11.4:202110-01
       docker_layer_caching: true
