--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,6 +24,7 @@ jobs:
         default: 'latest'
     steps:
       - checkout
+      - run: docker info
       - run:
           name: Build image
           command: |
